; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/tegra/extr_clk-dfll.c_tegra_dfll_runtime_suspend.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/tegra/extr_clk-dfll.c_tegra_dfll_runtime_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.tegra_dfll = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tegra_dfll_runtime_suspend(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.tegra_dfll*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %4 = load %struct.device*, %struct.device** %2, align 8
  %5 = call %struct.tegra_dfll* @dev_get_drvdata(%struct.device* %4)
  store %struct.tegra_dfll* %5, %struct.tegra_dfll** %3, align 8
  %6 = load %struct.tegra_dfll*, %struct.tegra_dfll** %3, align 8
  %7 = getelementptr inbounds %struct.tegra_dfll, %struct.tegra_dfll* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @clk_disable(i32 %8)
  %10 = load %struct.tegra_dfll*, %struct.tegra_dfll** %3, align 8
  %11 = getelementptr inbounds %struct.tegra_dfll, %struct.tegra_dfll* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @clk_disable(i32 %12)
  %14 = load %struct.tegra_dfll*, %struct.tegra_dfll** %3, align 8
  %15 = getelementptr inbounds %struct.tegra_dfll, %struct.tegra_dfll* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @clk_disable(i32 %16)
  ret i32 0
}

declare dso_local %struct.tegra_dfll* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @clk_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
